# game-of-life

./: CMakeLists.txt  README.md
src/: main.c
src/generators/: noise.h
